NXP-32866: Migrate MongoDB audit backend to new APIs